fixed footer overlap

--- a/src/static/index.css
+++ b/src/static/index.css
@@ -11,8 +11,7 @@ body{
     background-color: #3c3d41;
     color: whitesmoke;
     padding: 0px 3px;
-    margin-top: 200px;
-    z-index: auto;
+    z-index: 9;
 }
 
 @media screen and (max-width: 420px) {
